--- a/Folha de pagamento 2.0/Folha de pagamento 2.0/Folha de pagamento 2.0.csproj
+++ b/Folha de pagamento 2.0/Folha de pagamento 2.0/Folha de pagamento 2.0.csproj
@@ -46,19 +46,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\ClassCalculoFolhha.cs" />
     <Compile Include="Model\ClassFuncionarios.cs" />
     <Compile Include="Controller\FuncionariosController.cs" />
+    <Compile Include="msk_cpf\Text.cs" />
+    <Compile Include="View\CalculoFolha.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\CalculoFolha.Designer.cs">
+      <DependentUpon>CalculoFolha.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\DadosFuncionario.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\DadosFuncionario.Designer.cs">
       <DependentUpon>DadosFuncionario.cs</DependentUpon>
-    </Compile>
-    <Compile Include="View\DadosTrabalhista.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="View\DadosTrabalhista.Designer.cs">
-      <DependentUpon>DadosTrabalhista.cs</DependentUpon>
     </Compile>
     <Compile Include="View\LogIn.cs">
       <SubType>Form</SubType>
@@ -74,11 +76,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="View\CalculoFolha.resx">
+      <DependentUpon>CalculoFolha.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\DadosFuncionario.resx">
       <DependentUpon>DadosFuncionario.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\DadosTrabalhista.resx">
-      <DependentUpon>DadosTrabalhista.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\LogIn.resx">
       <DependentUpon>LogIn.cs</DependentUpon>
